nuevos fondos y parallax

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <a class="navbar-brand" href="https://memoricamexico.gob.mx/es/memorica/Exposiciones">
           <img type="image/svg+xml" src="work/models/memorica/recursos/img/champoton/logui.svg" alt="" class="logo" width="45px" height="45px">
         </a>
-        <!-- <div class="mini d-flex justify-content-between align-items-center">
+        <div class="mini d-flex justify-content-between align-items-center">
           <a href="" data-toggle="modal" data-target="#modalbotonescompartir" title="Compartir" class="share">
             <img type="image/svg+xml" alt="Compartir en redes sociales" src="work/models/memorica/recursos/img/champoton/share.svg" title="Compartir en redes Sociales" width="35px" height="35px">
           </a>
@@ -42,7 +42,7 @@
             <span class="middle"></span>
             <span class="bottom"></span>
           </div>
-        </div> -->
+        </div>
       </nav>
     </header>
 
@@ -89,8 +89,8 @@
         <div class="col-lg-3"></div>
       </div>
 
-      <div class="intro-splash d-flex align-items-end">
-        <img src="work/models/memorica/recursos/img/champoton/splash-complete.jpg" class="img-fluid" alt="">
+      <div class="intro-splash d-flex align-items-end parallax cover">
+        <img src="work/models/memorica/recursos/img/champoton/splash-coverdude.png" class="img-fluid" alt="">
       </div>
     </div>
 
@@ -113,7 +113,7 @@
       </div>
     </div>
 
-    <div class="parallax"></div>
+    <div class="parallax first"></div>
 
     <!-- Sala 1 -->
     <div id="sala1" class="container-fluid">
@@ -148,7 +148,7 @@
       </div>
     </div>
 
-    <div class="parallax"></div>
+    <div class="parallax second"></div>
 
     <!-- Sala 2 -->
     <div id="sala2" class="container-fluid">
@@ -184,7 +184,7 @@
       </div>
     </div>
 
-    <div class="parallax"></div>
+    <div class="parallax third"></div>
 
     <!-- Sala 3 -->
     <div id="sala3" class="container-fluid">
@@ -213,7 +213,7 @@
       </div>
     </div>
 
-    <div class="parallax"></div>
+    <div class="parallax last"></div>
 
     <!-- Créditos -->
       <div id="creditos" class="container-fluid pb-0">
@@ -285,11 +285,11 @@
 
     <!-- footer feo arruina diseños -->
     <div class="d-none d-sm-block">
-      <img class="img-fluid" style="object-fit: cover; width: 100%; height: auto; background: linear-gradient(to right, #13322B,#285C4D,#285C4D,#285C4D);" src="work/models/memorica/recursos/img/champoton/logo-footer.png" alt="">
+      <img class="img-fluid" style="object-fit: cover; width: 100%; height: auto; background: linear-gradient(to right, #13322B,#285C4D,#285C4D,#285C4D); border-top: 1px solid #FFF;" src="work/models/memorica/recursos/img/champoton/logo-footer.png" alt="">
     </div>
 
     <div class="d-block d-sm-none">
-      <img class="img-fluid" style="object-fit: cover; width: 100%; height: auto; background: linear-gradient(to right, #13322B,#285C4D,#285C4D,#285C4D);" src="work/models/memorica/recursos/img/champoton/logo-footer-sm.png" alt="">
+      <img class="img-fluid" style="object-fit: cover; width: 100%; height: auto; background: linear-gradient(to right, #13322B,#285C4D,#285C4D,#285C4D); border-top: 1px solid #FFF;" src="work/models/memorica/recursos/img/champoton/logo-footer-sm.png" alt="">
     </div>
 
 
