--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     <!-- Loader -->
     <div id="loader" class="d-flex flex-column justify-content-center align-items-center">
       <div class="spinner mb-1"></div>
-      <h2>Cargando...</h2>
+      <h2>CArgando...</h2>
     </div>
 
     <!-- Header -->
     <header>
-      <nav class="navbar fixed-top navbar-light">
+      <nav class="navbar fixed-top">
         <a class="navbar-brand" href="https://memoricamexico.gob.mx/es/memorica/Exposiciones">
           <img type="image/svg+xml" src="work/models/memorica/recursos/img/champoton/logui.svg" alt="" class="logo" width="45px" height="45px">
         </a>
@@ -79,11 +79,11 @@
 
     <!-- Portada -->
     <div id="cover" class="container-fluid px-0">
-      <div class="title row mx-0 pb-4 col-sm-12">
+      <div class="title row mx-0 mt-3 mt-sm-2 mt-md-0 pt-5 pt-sm-5 pb-4 col-sm-12">
         <div class="col-lg-3"></div>
         <div class="col-12 col-lg-6 px-5 d-flex flex-column justify-content-between">
           <h5 class="align-self-start mb-n3">Batalla de</h5>
-          <h1 class="pt-4 pt-sm-0 mb-n4">cHAmPOTóN</h1>
+          <h1 class="pt-4 pt-sm-0 mb-1 mb-sm-n2 mb-md-n1 mb-lg-n4">cHAmPOTóN</h1>
           <h5 class="align-self-end">¿la mala pelea?</h5>
         </div>
         <div class="col-lg-3"></div>
@@ -100,8 +100,9 @@
         <div class="col-lg-3"></div>
         <div class="col-12 col-lg-6 px-5">
           <h2>iNtroDUcCIÓn</h2>
-          <p>A comienzos del siglo <span style="font-variant: small-caps;">xvi</span>, poco más de dos décadas después de que Cristóbal Colón hubiera realizado un viaje hacia el oeste en busca de las Indias, La Española se consolidaba como el centro del poder, donde Diego Colón era gobernador, mientras que en Cuba Diego Velázquez estaba al mando como un subordinado del anterior.</p>
-          <div class="my-4 mx-sm-5 d-flex flex-column align-items-center">
+          <p>A comienzos del siglo <span style="font-variant: small-caps;">xvi</span>, poco más de dos décadas después de que Cristóbal Colón hubiera realizado un viaje hacia el oeste en busca de las Indias, <button type="button" class="pop-over" data-container="body" data-toggle="popover" data-placement="top" data-content="La isla La Española corresponde a lo que hoy es Haití y República Dominicana.">La española</button> se consolidaba como el centro del poder, donde Diego Colón era gobernador, mientras que en Cuba Diego Velázquez estaba al mando como un subordinado del anterior.</p>
+
+          <div class="my-4 mx-sm-0 d-flex flex-column align-items-center">
             <a class="go-to" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=5lhlsW8BDYPJmVhmKMIQ" target="_blank">
               <img src="work/models/memorica/recursos/img/champoton/objetos/0.jpg" class="img-fluid" alt="">
             </a>
@@ -128,7 +129,7 @@
             </a>
             <a class="caption" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=5lhlsW8BDYPJmVhmKMIQ" target="_blank">Francisco Hernandez de Cordoba.<br>Archivo <span style="font-variant: small-caps;">inah</span>, Campeche.</a>
           </div>
-          <p>A finales de 1516, tres ricos españoles que residían en Cuba formaron una sociedad: Cristóbal Morante, Lope Ochoa de Caicedo y Francisco Hernández de Córdoba se propusieron “cazar” indios en las islas de lucayos, nombrando a este último capitán de la expedición, la cual tuvo alrededor de 110 miembros, sin contar marineros, mujeres o esclavos.</p>
+          <p>A finales de 1516, tres ricos españoles que residían en Cuba formaron una sociedad: Cristóbal Morante, Lope Ochoa de Caicedo y Francisco Hernández de Córdoba se propusieron “cazar” indios en <button type="button" class="pop-over" data-container="body" data-toggle="popover" data-placement="top" data-content="Las islas de los lucayos hoy en día se conocen como Islas Bahamas.">las islas de lucayos</button>, nombrando a este último capitán de la expedición, la cual tuvo alrededor de 110 miembros, sin contar marineros, mujeres o esclavos.</p>
           <div class="my-4 mx-sm-5 d-flex flex-column align-items-center">
             <a class="go-to" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=5lhlsW8BDYPJmVhmKMIQ" target="_blank">
               <img src="work/models/memorica/recursos/img/champoton/objetos/1.2.png" class="img-fluid" alt="">
@@ -142,7 +143,7 @@
             </a>
             <a class="caption" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=5lhlsW8BDYPJmVhmKMIQ" target="_blank">Portada de Historia de las conquistas de Hernando Cortés<br>de Bernal Díaz del Castillo publicada en 1904.</a>
           </div>
-          <p>La expedición salió del puerto de La Habana, según Díaz del Castillo, el 8 de febrero, tardando 12 días en entrar a mar abierto y otros tantos más en llegar a tierra firme, lo cual se cree que ocurrió a principios de marzo de 1517. Los cronistas difieren en cuanto al punto al que arribaron los españoles; éste pudo haber sido Punta Mujeres, Cabo Catoche o ambos, de donde, se narra, siguieron la costa seguramente para darse una idea de las dimensiones del territorio. Cuando desembarcaron en Campeche se les recibió con amabilidad, es por ello que hay referencias a un banquete y a una visita al templo: “Les dieron perdices, tórtolas, ánades y gallipavos, liebres, ciervos y otros animales de comer mucho pan de maíz y frutas (López de Gómara); “Y nos llevaron a unas casas muy grandes, que eran adoratorios de sus ídolos y bien labradas de cal y canto, y tenían figurado en unas paredes muchos bultos de serpientes y culebras grandes, y otras pinturas de ídolos de malas figuras, alrededor de uno como altar, lleno de gotas de sangre” (Díaz del Castillo).</p>
+          <p>La expedición salió del puerto de La Habana, <button type="button" class="pop-over" data-container="body" data-toggle="popover" data-placement="top" data-content="Bernal Díaz del Castillo en su Verdadera conquista de la Nueva España relata la expedición a Yucatán en 1517 como un testimonio directo, sin embargo, lo escribiría varias décadas después.">según Díaz del Castillo</button>, el 8 de febrero, tardando 12 días en entrar a mar abierto y otros tantos más en llegar a tierra firme, lo cual se cree que ocurrió a principios de marzo de 1517. Los cronistas difieren en cuanto al punto al que arribaron los españoles; éste pudo haber sido Punta Mujeres, Cabo Catoche o ambos, de donde, se narra, siguieron la costa seguramente para darse una idea de las dimensiones del territorio. Cuando desembarcaron en Campeche se les recibió con amabilidad, es por ello que hay referencias a un banquete y a una visita al templo: “Les dieron perdices, tórtolas, ánades y gallipavos, liebres, ciervos y otros animales de comer mucho pan de maíz y frutas <button type="button" class="pop-over" data-container="body" data-toggle="popover" data-placement="top" data-content="Francisco López de Gómara relata este acontecimiento basado en documentos que consultó y en testimonios directos que le ofrecieron.">(López de Gómara)</button>; “Y nos llevaron a unas casas muy grandes, que eran adoratorios de sus ídolos y bien labradas de cal y canto, y tenían figurado en unas paredes muchos bultos de serpientes y culebras grandes, y otras pinturas de ídolos de malas figuras, alrededor de uno como altar, lleno de gotas de sangre” (Díaz del Castillo).</p>
         </div>
         <div class="col-lg-3"></div>
       </div>
@@ -157,14 +158,14 @@
         <div class="col-12 col-lg-6 px-5">
           <h2>SalA 2:</h2>
           <h3>cHAmpotón resiste <br>lideraDO POr MocH COUoh</h3>
-          <div class="my-4 mx-sm-5 d-flex flex-column align-items-center">
+          <div class="my-4 mx-sm-0 d-flex flex-column align-items-center">
             <a class="go-to" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=5lhlsW8BDYPJmVhmKMIQ" target="_blank">
               <img src="work/models/memorica/recursos/img/champoton/objetos/2.1.jpeg" class="img-fluid" alt="">
             </a>
             <a class="caption" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=5lhlsW8BDYPJmVhmKMIQ" target="_blank">Moch Couoh, Reynaldo Bolio Suarez,<br>Malecón de Champotón, Campeche. 2018.</a>
           </div>
           <p>El viaje continuó por la costa, pero con un problema de vital importancia, el agua. Debido a esto se aventuraron a buscarla en tierra firme llegando así a Champotón, o como se le llamó en diversas narraciones: Moscobo, Nochopobón o Potonchán, lugar que era liderado por Moch Couoh.</p>
-          <div class="my-4 mx-sm-5 d-flex flex-column align-items-center">
+          <div class="my-4 mx-sm-0 d-flex flex-column align-items-center">
             <a class="go-to" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=5lhlsW8BDYPJmVhmKMIQ" target="_blank">
               <img src="work/models/memorica/recursos/img/champoton/objetos/2.2.jpg" class="img-fluid" alt="">
             </a>
@@ -172,7 +173,7 @@
           </div>
           <p>Bernal recalca que la escasez del agua se debía a que sus contenedores estaban muy abiertos,  por lo cual no se podía conservar de manera adecuada y necesitaban hacer paradas constantes para conseguirla: “Una armada de hombres pobres, no teníamos dinero cuanto convenía para comprar buenas pipas” (Díaz del Castillo).</p>
           <p>Los españoles desembarcaron, y de inmediato los relatos se enfocan en la naturaleza guerrera de quienes los recibieron: “con sus armas de algodón que les daba a las rodillas, y con arcos y flechas, y lanzas y rodelas, y espadas hechas a manera de montantes de a dos manos, y hondas y piedras, y con sus penachos de los que ellos suelen usar, y las caras pintadas de blanco y prieto enalmagrados” (Díaz del Castillo).</p>
-          <div class="my-4 mx-sm-5 d-flex flex-column align-items-center">
+          <div class="my-4 mx-sm-0 d-flex flex-column align-items-center">
             <a class="go-to" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=5lhlsW8BDYPJmVhmKMIQ" target="_blank">
               <img src="work/models/memorica/recursos/img/champoton/objetos/2.3.png" class="img-fluid" alt="">
             </a>
@@ -200,14 +201,14 @@
             <a class="caption" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=5lhlsW8BDYPJmVhmKMIQ" target="_blank">Bernal Díaz del Castillo,<br>Salvador Pruneda. 1948.</a>
           </div>
           <p>Cuando se habla de la conquista –término que aquí será sustituido por el de “la irrupción española y la guerra mesoamericana”–, es necesario tener presente el rancio discurso que se ha reproducido sobre este proceso histórico. Es bien sabido, pero bastante ignorado, que a pesar de que los cronistas estuvieron presentes y accedieron a documentos y testimonios de la época, sus narraciones no dan cuenta con exactitud de lo sucedido, es por esto que cuestionar sus intereses e influencias muchas veces ayuda a comprender sus relatos.</p>
-          <div class="my-4 mx-sm-5 d-flex flex-column align-items-center">
+          <div class="my-4 mx-sm-0 d-flex flex-column align-items-center">
             <a class="go-to" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=5lhlsW8BDYPJmVhmKMIQ" target="_blank">
               <img src="work/models/memorica/recursos/img/champoton/objetos/3.2.png" class="img-fluid" alt="">
             </a>
             <a class="caption" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=5lhlsW8BDYPJmVhmKMIQ" target="_blank">Expediente 11 de Vínculos y Mayorazgos. 1588.<br></a>
           </div>
           <p>La Batalla de Champotón ha sido conocida como “la mala pelea” por un largo tiempo, sin embargo, estas narraciones y este nombre sólo aluden a la facción castellana de este encuentro, quienes hacen notar si fue o no favorable para ellos, mientras que la perspectiva indígena queda olvidada no sólo por la ausencia de registros de la época, sino por la falta de estudios que reinterpreten el suceso con una perspectiva diferente. Es nuestra labor en Memórica resguardar y presentar las fuentes documentales, así como plantear una serie de incógnitas para cuestionarnos los sucesos históricos.</p>
-          <p>La expedición de Francisco de Hernández y Córdoba y la Batalla de Champotón sin duda alguna se vuelven el preámbulo a “la irrupción española”, que a partir de ese momento continúa con dos expediciones más: la primera será la de Grijalva en 1518 y la otra, la de Hernán Cortés, que culmina en 1519 con el término de la sociedad mexica como bastión del poder político y administrativo en el Altiplano.</p>
+          <p>La expedición de <button type="button" class="pop-over" data-container="body" data-toggle="popover" data-placement="top" data-content="Varios tripulantes de esta expedición participaron en las incursiones de Grijalva y de Hernán Cortés.">Francisco de Hernández y Córdoba</button> y la Batalla de Champotón sin duda alguna se vuelven el preámbulo a “la irrupción española”, que a partir de ese momento continúa con dos expediciones más: la primera será la de Grijalva en 1518 y la otra, la de Hernán Cortés, que culmina en 1519 con el término de la sociedad mexica como bastión del poder político y administrativo en el Altiplano.</p>
         </div>
         <div class="col-lg-3"></div>
       </div>
@@ -221,7 +222,7 @@
           <div class="col-lg-3"></div>
           <div class="col-12 col-lg-6 px-5">
             <h2 class="mt-4 mt-sm-0">MateriAl de apOyo</h2>
-            <ul>
+            <ul class="pl-0">
               <li>Díaz del Castillo, Bernal, <em>Historia verdadera de la conquista de la Nueva España</em>, México, Porrúa, 1992.</li>
               <li>López de Gómara, Francisco, <em>Historia de la conquista de México</em>, Venezuela, Fundación Biblioteca Ayacucho, 2007.</li>
               <li>Ortiz Lanz, José Enrique, <em>Las verdaderas historias del descubrimiento de la Nueva España., Las expediciones de Hernández de Córdoba y Grijalva 1517-1518</em>, México, Cámara de Diputados, México, 2018.</li>
@@ -285,11 +286,11 @@
 
     <!-- footer feo arruina diseños -->
     <div class="d-none d-sm-block">
-      <img class="img-fluid" style="object-fit: cover; width: 100%; height: auto; background: linear-gradient(to right, #13322B,#285C4D,#285C4D,#285C4D); border-top: 1px solid #FFF;" src="work/models/memorica/recursos/img/champoton/logo-footer.png" alt="">
+      <img class="img-fluid" style="object-fit: cover; width: 100%; height: auto; background: linear-gradient(to right, #13322B,#285C4D,#285C4D,#285C4D); border-top: 2px solid #FFF;" src="work/models/memorica/recursos/img/champoton/logo-footer.png" alt="">
     </div>
 
     <div class="d-block d-sm-none">
-      <img class="img-fluid" style="object-fit: cover; width: 100%; height: auto; background: linear-gradient(to right, #13322B,#285C4D,#285C4D,#285C4D); border-top: 1px solid #FFF;" src="work/models/memorica/recursos/img/champoton/logo-footer-sm.png" alt="">
+      <img class="img-fluid" style="object-fit: cover; width: 100%; height: auto; background: linear-gradient(to right, #13322B,#285C4D,#285C4D,#285C4D); border-top: 2px solid #FFF;" src="work/models/memorica/recursos/img/champoton/logo-footer-sm.png" alt="">
     </div>
 
 
@@ -317,6 +318,11 @@
       $('.go').click(function() {
         $('#overlay').toggleClass('open');
         $('.button-container').removeClass('active');
+      });
+
+      //popover
+      $(function () {
+        $('[data-toggle="popover"]').popover()
       });
     </script>
   </body>
