--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
           <p>A comienzos del siglo <span style="font-variant: small-caps;">xvi</span>, poco más de dos décadas después de que Cristóbal Colón hubiera realizado un viaje hacia el oeste en busca de las Indias, <button type="button" class="pop-over" data-container="body" data-toggle="popover" data-placement="top" data-content="La isla La Española corresponde a lo que hoy es Haití y República Dominicana.">La española</button> se consolidaba como el centro del poder, donde Diego Colón era gobernador, mientras que en Cuba Diego Velázquez estaba al mando como un subordinado del anterior.</p>
 
           <div class="my-4 mx-sm-0 d-flex flex-column align-items-center">
-            <a class="go-to" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=5lhlsW8BDYPJmVhmKMIQ" target="_blank">
+            <a class="go-to" href="en proceso de ingesta" target="_blank">
               <img src="work/models/memorica/recursos/img/champoton/objetos/0.jpg" class="img-fluid" alt="">
             </a>
-            <a class="caption" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=5lhlsW8BDYPJmVhmKMIQ" target="_blank">Carta de las costas de Tierra Firme. <br>M. Moreno, P. Gangoiti y R. Esteve. 1825.</a>
+            <a class="caption" href="en proceso de ingesta" target="_blank">Carta de las costas de Tierra Firme. <br>M. Moreno, P. Gangoiti y R. Esteve. 1825.</a>
           </div>
           <p>Este conjunto de islas, bautizadas como las Indias, representaron la oportunidad de aquellos españoles caídos en desgracia, casi siempre económica, para hacerse ricos mediante la explotación de las encomiendas. Sin embargo, el sueño distaba mucho de la realidad. Fueron pocos los que se enriquecieron y muchos los que vivían precariamente, por lo que veían en los viajes a las islas vecinas, en las que apresaban indios para después esclavizarlos, una clara oportunidad de ganar dinero. Para los encomenderos, esta actividad se volvió cada vez más necesaria debido a la alta mortandad de los nativos al realizar trabajos forzados; no obstante, aunque las incursiones a las ínsulas cercanas fueron recurrentes, la posibilidad de que hubiera una expedición exclusivamente dedicada a descubrir nuevas tierras era poco probable, ya que ésta implicaba una inversión significativa, así como los permisos pertinentes para realizar dicha tarea.</p>
         </div>
@@ -124,24 +124,24 @@
           <h2>sALa 1:</h2>
           <h3>Francisco HerNánDez de CórdObA <br>y el viaje en El que encontró YUcatán</h3>
           <div class="my-4 mx-sm-5 d-flex flex-column align-items-center">
-            <a class="go-to" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=5lhlsW8BDYPJmVhmKMIQ" target="_blank">
+            <a class="go-to" href="https://memoricamexico.gob.mx/es/memorica/Resultados?q=glifos+12+a%C3%B1o+4&x=0&y=0" target="_blank">
               <img src="work/models/memorica/recursos/img/champoton/objetos/1.1.png" class="img-fluid" alt="">
             </a>
-            <a class="caption" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=5lhlsW8BDYPJmVhmKMIQ" target="_blank">Francisco Hernandez de Cordoba.<br>Archivo <span style="font-variant: small-caps;">inah</span>, Campeche.</a>
+            <a class="caption" href="https://memoricamexico.gob.mx/es/memorica/Resultados?q=glifos+12+a%C3%B1o+4&x=0&y=0" target="_blank">Francisco Hernandez de Cordoba.<br>Archivo <span style="font-variant: small-caps;">inah</span>, Campeche.</a>
           </div>
           <p>A finales de 1516, tres ricos españoles que residían en Cuba formaron una sociedad: Cristóbal Morante, Lope Ochoa de Caicedo y Francisco Hernández de Córdoba se propusieron “cazar” indios en <button type="button" class="pop-over" data-container="body" data-toggle="popover" data-placement="top" data-content="Las islas de los lucayos hoy en día se conocen como Islas Bahamas.">las islas de lucayos</button>, nombrando a este último capitán de la expedición, la cual tuvo alrededor de 110 miembros, sin contar marineros, mujeres o esclavos.</p>
           <div class="my-4 mx-sm-5 d-flex flex-column align-items-center">
-            <a class="go-to" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=5lhlsW8BDYPJmVhmKMIQ" target="_blank">
+            <a class="go-to" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=30Xr-G8BprXWc8853kjx" target="_blank">
               <img src="work/models/memorica/recursos/img/champoton/objetos/1.2.png" class="img-fluid" alt="">
             </a>
-            <a class="caption" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=5lhlsW8BDYPJmVhmKMIQ" target="_blank">Portada de Historia verdadera de la conquista de la Nueva España<br>de Bernal Díaz del Castillo publicada en 1904.</a>
+            <a class="caption" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=30Xr-G8BprXWc8853kjx" target="_blank">Portada de Historia verdadera de la conquista de la Nueva España<br>de Bernal Díaz del Castillo publicada en 1904.</a>
           </div>
           <p>Existe mención de algunos de los nombres y sus puestos: un escribano de apellido Morales y el clérigo Alonso González; también se encontraban Antón Alaminos, Camacho de Triana y Juan Álvarez, capitanes de dos embarcaciones y un bergantín de Diego Velázquez, quien se supone que dio un consentimiento verbal para este viaje, dado que no hay registro escrito. Aunque hay diversas referencias a cómo el objetivo de la expedición pasó de ser el de capturar indios al de encontrar un territorio desconocido, es probable que uno pudo haber llevado al otro de una manera fortuita.</p>
           <div class="my-4 mx-sm-5 d-flex flex-column align-items-center">
-            <a class="go-to" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=5lhlsW8BDYPJmVhmKMIQ" target="_blank">
+            <a class="go-to" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=XkXs-G8BprXWc885ik26" target="_blank">
               <img src="work/models/memorica/recursos/img/champoton/objetos/1.3.png" class="img-fluid" alt="">
             </a>
-            <a class="caption" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=5lhlsW8BDYPJmVhmKMIQ" target="_blank">Portada de Historia de las conquistas de Hernando Cortés<br>de Bernal Díaz del Castillo publicada en 1904.</a>
+            <a class="caption" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=XkXs-G8BprXWc885ik26" target="_blank">Portada de Historia de las conquistas de Hernando Cortés<br>de Bernal Díaz del Castillo publicada en 1904.</a>
           </div>
           <p>La expedición salió del puerto de La Habana, <button type="button" class="pop-over" data-container="body" data-toggle="popover" data-placement="top" data-content="Bernal Díaz del Castillo en su Verdadera conquista de la Nueva España relata la expedición a Yucatán en 1517 como un testimonio directo, sin embargo, lo escribiría varias décadas después.">según Díaz del Castillo</button>, el 8 de febrero, tardando 12 días en entrar a mar abierto y otros tantos más en llegar a tierra firme, lo cual se cree que ocurrió a principios de marzo de 1517. Los cronistas difieren en cuanto al punto al que arribaron los españoles; éste pudo haber sido Punta Mujeres, Cabo Catoche o ambos, de donde, se narra, siguieron la costa seguramente para darse una idea de las dimensiones del territorio. Cuando desembarcaron en Campeche se les recibió con amabilidad, es por ello que hay referencias a un banquete y a una visita al templo: “Les dieron perdices, tórtolas, ánades y gallipavos, liebres, ciervos y otros animales de comer mucho pan de maíz y frutas <button type="button" class="pop-over" data-container="body" data-toggle="popover" data-placement="top" data-content="Francisco López de Gómara relata este acontecimiento basado en documentos que consultó y en testimonios directos que le ofrecieron.">(López de Gómara)</button>; “Y nos llevaron a unas casas muy grandes, que eran adoratorios de sus ídolos y bien labradas de cal y canto, y tenían figurado en unas paredes muchos bultos de serpientes y culebras grandes, y otras pinturas de ídolos de malas figuras, alrededor de uno como altar, lleno de gotas de sangre” (Díaz del Castillo).</p>
         </div>
@@ -159,25 +159,19 @@
           <h2>SalA 2:</h2>
           <h3>cHAmpotón resiste <br>lideraDO POr MocH COUoh</h3>
           <div class="my-4 mx-sm-0 d-flex flex-column align-items-center">
-            <a class="go-to" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=5lhlsW8BDYPJmVhmKMIQ" target="_blank">
-              <img src="work/models/memorica/recursos/img/champoton/objetos/2.1.jpeg" class="img-fluid" alt="">
-            </a>
-            <a class="caption" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=5lhlsW8BDYPJmVhmKMIQ" target="_blank">Moch Couoh, Reynaldo Bolio Suarez,<br>Malecón de Champotón, Campeche. 2018.</a>
+            <img src="work/models/memorica/recursos/img/champoton/objetos/2.1.jpeg" class="img-fluid" alt="">
+            <p class="caption">Moch Couoh, Reynaldo Bolio Suarez,<br>Malecón de Champotón, Campeche. 2018.</p>
           </div>
           <p>El viaje continuó por la costa, pero con un problema de vital importancia, el agua. Debido a esto se aventuraron a buscarla en tierra firme llegando así a Champotón, o como se le llamó en diversas narraciones: Moscobo, Nochopobón o Potonchán, lugar que era liderado por Moch Couoh.</p>
           <div class="my-4 mx-sm-0 d-flex flex-column align-items-center">
-            <a class="go-to" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=5lhlsW8BDYPJmVhmKMIQ" target="_blank">
-              <img src="work/models/memorica/recursos/img/champoton/objetos/2.2.jpg" class="img-fluid" alt="">
-            </a>
-            <a class="caption" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=5lhlsW8BDYPJmVhmKMIQ" target="_blank">Atlante de Moch Couoh, Armando Gil Mendicuti,<br>Parque Las Américas, Champotón, Campeche. 1955.</a>
+            <img src="work/models/memorica/recursos/img/champoton/objetos/2.2.jpg" class="img-fluid" alt="">
+            <p class="caption">Atlante de Moch Couoh, Armando Gil Mendicuti,<br>Parque Las Américas, Champotón, Campeche. 1955.</p>
           </div>
           <p>Bernal recalca que la escasez del agua se debía a que sus contenedores estaban muy abiertos,  por lo cual no se podía conservar de manera adecuada y necesitaban hacer paradas constantes para conseguirla: “Una armada de hombres pobres, no teníamos dinero cuanto convenía para comprar buenas pipas” (Díaz del Castillo).</p>
           <p>Los españoles desembarcaron, y de inmediato los relatos se enfocan en la naturaleza guerrera de quienes los recibieron: “con sus armas de algodón que les daba a las rodillas, y con arcos y flechas, y lanzas y rodelas, y espadas hechas a manera de montantes de a dos manos, y hondas y piedras, y con sus penachos de los que ellos suelen usar, y las caras pintadas de blanco y prieto enalmagrados” (Díaz del Castillo).</p>
           <div class="my-4 mx-sm-0 d-flex flex-column align-items-center">
-            <a class="go-to" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=5lhlsW8BDYPJmVhmKMIQ" target="_blank">
-              <img src="work/models/memorica/recursos/img/champoton/objetos/2.3.png" class="img-fluid" alt="">
-            </a>
-            <a class="caption" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=5lhlsW8BDYPJmVhmKMIQ" target="_blank">“Batalla de la mala pelea” en Campeche.<br>Frente a las murallas, un tesoro marino,<br>Monografía estatal Secretaría de Educación Pública. 1994, pp. 140-141.</a>
+            <img src="work/models/memorica/recursos/img/champoton/objetos/2.3.png" class="img-fluid" alt="">
+            <p class="caption">“Batalla de la mala pelea” en Campeche.<br>Frente a las murallas, un tesoro marino,<br>Monografía estatal Secretaría de Educación Pública. <br>1994, pp. 140-141.</p>
           </div>
           <p>Bernal Díaz del Castillo calcula 300 indígenas por cada uno de los 110 españoles, es decir, aproximadamente 3,300 guerreros que estaban a la expectativa, mientras que los expedicionarios decidieron dormir en tierra firme debido a que aún no contaban con la suficiente agua potable. Es al amanecer cuando se deja oír el sonido de tambores y una lluvia de piedras cae sobre ellos. Son heridos y perseguidos en la huida hacia sus naves. Díaz del Castillo relata que más de la mitad de los hombres murieron –57– y el resto quedó herido, a excepción de uno, mientras que Francisco Hernández de Córdoba recibió más de una treintena de flechas. Así, la expedición llegó a su fin y retomaron el rumbo hacia Cuba.</p>
         </div>
@@ -195,17 +189,15 @@
           <h2>sAla 3:</h2>
           <h3>La BAtaLlA de cHAmPOtón COmo El coMienzO DE lA irRUpciÓn esPañoLA y la gueRra MEsOamericaNA</h3>
           <div class="my-4 mx-sm-5 d-flex flex-column align-items-center">
-            <a class="go-to" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=5lhlsW8BDYPJmVhmKMIQ" target="_blank">
-              <img src="work/models/memorica/recursos/img/champoton/objetos/3.1.png" class="img-fluid" alt="">
-            </a>
-            <a class="caption" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=5lhlsW8BDYPJmVhmKMIQ" target="_blank">Bernal Díaz del Castillo,<br>Salvador Pruneda. 1948.</a>
+            <img src="work/models/memorica/recursos/img/champoton/objetos/3.1.png" class="img-fluid" alt="">
+            <p class="caption">Bernal Díaz del Castillo,<br>Salvador Pruneda. 1948.</p>
           </div>
           <p>Cuando se habla de la conquista –término que aquí será sustituido por el de “la irrupción española y la guerra mesoamericana”–, es necesario tener presente el rancio discurso que se ha reproducido sobre este proceso histórico. Es bien sabido, pero bastante ignorado, que a pesar de que los cronistas estuvieron presentes y accedieron a documentos y testimonios de la época, sus narraciones no dan cuenta con exactitud de lo sucedido, es por esto que cuestionar sus intereses e influencias muchas veces ayuda a comprender sus relatos.</p>
           <div class="my-4 mx-sm-0 d-flex flex-column align-items-center">
-            <a class="go-to" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=5lhlsW8BDYPJmVhmKMIQ" target="_blank">
+            <a class="go-to" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=Zb7QrG8BJIKPlgbpAGbf" target="_blank">
               <img src="work/models/memorica/recursos/img/champoton/objetos/3.2.png" class="img-fluid" alt="">
             </a>
-            <a class="caption" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=5lhlsW8BDYPJmVhmKMIQ" target="_blank">Expediente 11 de Vínculos y Mayorazgos. 1588.<br></a>
+            <a class="caption" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=Zb7QrG8BJIKPlgbpAGbf" target="_blank">Expediente 11 de Vínculos y Mayorazgos. 1588.<br></a>
           </div>
           <p>La Batalla de Champotón ha sido conocida como “la mala pelea” por un largo tiempo, sin embargo, estas narraciones y este nombre sólo aluden a la facción castellana de este encuentro, quienes hacen notar si fue o no favorable para ellos, mientras que la perspectiva indígena queda olvidada no sólo por la ausencia de registros de la época, sino por la falta de estudios que reinterpreten el suceso con una perspectiva diferente. Es nuestra labor en Memórica resguardar y presentar las fuentes documentales, así como plantear una serie de incógnitas para cuestionarnos los sucesos históricos.</p>
           <p>La expedición de <button type="button" class="pop-over" data-container="body" data-toggle="popover" data-placement="top" data-content="Varios tripulantes de esta expedición participaron en las incursiones de Grijalva y de Hernán Cortés.">Francisco de Hernández y Córdoba</button> y la Batalla de Champotón sin duda alguna se vuelven el preámbulo a “la irrupción española”, que a partir de ese momento continúa con dos expediciones más: la primera será la de Grijalva en 1518 y la otra, la de Hernán Cortés, que culmina en 1519 con el término de la sociedad mexica como bastión del poder político y administrativo en el Altiplano.</p>
@@ -227,6 +219,7 @@
               <li>López de Gómara, Francisco, <em>Historia de la conquista de México</em>, Venezuela, Fundación Biblioteca Ayacucho, 2007.</li>
               <li>Ortiz Lanz, José Enrique, <em>Las verdaderas historias del descubrimiento de la Nueva España., Las expediciones de Hernández de Córdoba y Grijalva 1517-1518</em>, México, Cámara de Diputados, México, 2018.</li>
               <li>Tola de Habich, Fernando, <em>Yucatán 1517. El segundo descubrimiento de América (Hernández de Córdoba)</em>, México, <span style="font-variant: small-caps;">cphycs-unam</span> (Colección Sextante), 2018.</li>
+              <li><em>Campeche. Frente a las murallas, un tesoro marino</em>, Monografía estatal Secretaría de Educación Pública. 1994, pp. 140-141. (En https://historico.conaliteg.gob.mx/H1993P6HI220.htm])</li>
             </ul>
 
             <h2>créDiTOs</h2>
