--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
     <!-- reserved for social metadata -->
     <RESOURCE TYPE="JSPEditor" STYPE="OpenGraphTags" />
-    <meta property="og:image" content="/work/models/memorica/recursos/img/miniatura_expo_champoton.jpg">
+    <meta property="og:image" content="/work/models/memorica/recursos/img/miniatura_expo_champ.jpg">
     <meta property="og:image:type" content="image/svg">
     <meta property="og:image:width" content="1024">
     <meta property="og:image:height" content="1024">
-    <meta name="twitter:image:src" content="https://memoricamexico.gob.mx/work/models/memorica/recursos/img/miniatura_expo_champoton.jpg">
+    <meta name="twitter:image:src" content="https://memoricamexico.gob.mx/work/models/memorica/recursos/img/miniatura_expo_champ.jpg">
   </head>
   <body>
     <!-- Loader -->
@@ -81,7 +81,7 @@
     <div id="cover" class="container-fluid px-0">
       <div class="title row mx-0 mt-3 mt-sm-2 mt-md-0 pt-5 pt-sm-5 pb-4 col-sm-12">
         <div class="col-lg-3"></div>
-        <div class="col-12 col-lg-6 px-5 d-flex flex-column justify-content-between">
+        <div class="col-12 col-lg-6 px-4 px-sm-5 d-flex flex-column justify-content-between">
           <h5 class="align-self-start mb-n3">Batalla de</h5>
           <h1 class="pt-4 pt-sm-0 mb-1 mb-sm-n2 mb-md-n1 mb-lg-n4">cHAmPOTóN</h1>
           <h5 class="align-self-end">¿la mala pelea?</h5>
@@ -98,7 +98,7 @@
     <div id="intro" class="container-fluid">
       <div class="row my-5">
         <div class="col-lg-3"></div>
-        <div class="col-12 col-lg-6 px-5">
+        <div class="col-12 col-lg-6 px-4 px-sm-5">
           <h2>iNtroDUcCIÓn</h2>
           <p>A comienzos del siglo <span style="font-variant: small-caps;">xvi</span>, poco más de dos décadas después de que Cristóbal Colón hubiera realizado un viaje hacia el oeste en busca de las Indias, <button type="button" class="pop-over" data-container="body" data-toggle="popover" data-placement="top" data-content="La isla La Española corresponde a lo que hoy es Haití y República Dominicana.">La española</button> se consolidaba como el centro del poder, donde Diego Colón era gobernador, mientras que en Cuba Diego Velázquez estaba al mando como un subordinado del anterior.</p>
 
@@ -120,7 +120,7 @@
     <div id="sala1" class="container-fluid">
       <div class="row my-5">
         <div class="col-lg-3"></div>
-        <div class="col-12 col-lg-6 px-5">
+        <div class="col-12 col-lg-6 px-4 px-sm-5">
           <h2>sALa 1:</h2>
           <h3>Francisco HerNánDez de CórdObA <br>y el viaje en El que encontró YUcatán</h3>
           <div class="my-4 mx-sm-5 d-flex flex-column align-items-center">
@@ -155,7 +155,7 @@
     <div id="sala2" class="container-fluid">
       <div class="row my-5">
         <div class="col-lg-3"></div>
-        <div class="col-12 col-lg-6 px-5">
+        <div class="col-12 col-lg-6 px-4 px-sm-5">
           <h2>SalA 2:</h2>
           <h3>cHAmpotón resiste <br>lideraDO POr MocH COUoh</h3>
           <div class="my-4 mx-sm-0 d-flex flex-column align-items-center">
@@ -185,7 +185,7 @@
     <div id="sala3" class="container-fluid">
       <div class="row my-5">
         <div class="col-lg-3"></div>
-        <div class="col-12 col-lg-6 px-5">
+        <div class="col-12 col-lg-6 px-4 px-sm-5">
           <h2>sAla 3:</h2>
           <h3>La BAtaLlA de cHAmPOtón COmo El coMienzO DE lA irRUpciÓn esPañoLA y la gueRra MEsOamericaNA</h3>
           <div class="my-4 mx-sm-5 d-flex flex-column align-items-center">
@@ -212,7 +212,7 @@
       <div id="creditos" class="container-fluid pb-0">
         <div class="row my-5">
           <div class="col-lg-3"></div>
-          <div class="col-12 col-lg-6 px-5">
+          <div class="col-12 col-lg-6 px-4 px-sm-5">
             <h2 class="mt-4 mt-sm-0">MateriAl de apOyo</h2>
             <ul class="pl-0">
               <li>Díaz del Castillo, Bernal, <em>Historia verdadera de la conquista de la Nueva España</em>, México, Porrúa, 1992.</li>
