--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
-    <title><TOPIC METHOD="getDisplayName" LANGUAGE="{user@getLanguage}"/> - Memórica</title>
+    <title>Batalla de Champotón - Memórica</title>
     <link rel="icon" type="image/ico" href="/work/models/memorica/recursos/img/favicon/favicon.ico"/>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -103,10 +103,10 @@
           <p>A comienzos del siglo <span style="font-variant: small-caps;">xvi</span>, poco más de dos décadas después de que Cristóbal Colón hubiera realizado un viaje hacia el oeste en busca de las Indias, <a class="pop-over" data-container="body" data-toggle="popover" data-placement="top" data-content="La isla La Española corresponde a lo que hoy es Haití y República Dominicana.">La Española</a> se consolidaba como el centro del poder, donde Diego Colón era gobernador, mientras que en Cuba Diego Velázquez estaba al mando como un subordinado del anterior.</p>
 
           <div class="my-4 mx-sm-0 d-flex flex-column align-items-center">
-            <a class="go-to" href="en proceso de ingesta" target="_blank">
+            <a class="go-to" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=GVOpX3gBEm5o1lkeSx7O" target="_blank">
               <img src="work/models/memorica/recursos/img/champoton/objetos/0.jpg" class="img-fluid" alt="">
             </a>
-            <a class="caption" href="en proceso de ingesta" target="_blank"><em>Carta de las costas de Tierra Firme.</em><br>M. Moreno, P. Gangoiti y R. Esteve. 1825.</a>
+            <a class="caption" href="https://memoricamexico.gob.mx/swb/memorica/Cedula?oId=GVOpX3gBEm5o1lkeSx7O" target="_blank"><em>Carta de las costas de Tierra Firme.</em><br>M. Moreno, P. Gangoiti y R. Esteve. 1825.</a>
           </div>
           <p>Este conjunto de islas, bautizadas como las Indias, representaron la oportunidad, casi siempre económica, de aquellos españoles caídos en desgracia, para hacerse ricos mediante la explotación de las encomiendas. Sin embargo, el sueño distaba mucho de la realidad. Fueron pocos los que se enriquecieron y muchos los que vivían precariamente, por lo que veían en los viajes a las islas vecinas, en las que apresaban indios para después esclavizarlos, una clara oportunidad de ganar dinero. Para los encomenderos, esta actividad se volvió cada vez más necesaria debido a la alta mortandad de los nativos al realizar trabajos forzados; no obstante, aunque las incursiones a las ínsulas cercanas fueron recurrentes, la posibilidad de que hubiera una expedición exclusivamente dedicada a descubrir nuevas tierras era poco probable, ya que ésta implicaba una inversión significativa, así como los permisos pertinentes para realizar dicha tarea.</p>
         </div>
